syntax = "proto3";

package echo;

service EchoService {
  rpc Echo (EchoRequest) returns (EchoResponse);
  rpc EchoReverse (EchoReverseRequest) returns (EchoReverseResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message EchoReverseRequest {
  string message = 1;
}

message EchoReverseResponse {
  string message = 1;
}
